feat(login): Mejora de interfaz simple de login y regitro