@@ -121,6 +121,9 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>com.lectomundo.app.Main</mainClass>
+          <options>
+            <option>--enable-native-access=ALL-UNNAMED</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
